--- a/bookstore/readme.adoc
+++ b/bookstore/readme.adoc
@@ -2,4 +2,4 @@
 
 This is a mock project which provides a rest service to a client of an online bookstore.
 
-![Screenshot]=(https://github.com/nganga-anaene/web-projects/blob/master/bookstore/bookstore%20simple%20model.png)
+<a><img src="https://github.com/nganga-anaene/web-projects/blob/master/bookstore/bookstore%20simple%20model.png"></a>
